# mini-ecs-nau

./: .clang-format  .gitattributes  CMakeLists.txt  README.md  mini-ecs-nau.cpp  mini-ecs-nau.h
.github/workflows/: ci.yml
docs/adr/: 0001-component-pool-storage.md
src/: Component.h  ComponentPool.h  ComponentRegistry.h  Entity.h  HealthComponent.h  IComponentPool.h  ISavable.h  MovementSystem.h  Profiler.h  Scene.h  System.h  TransformComponent.h  main.cpp
src/components/: health_component.cpp  health_component.h  transform_component.cpp  transform_component.h
src/core/: component.h  component_pool.h  component_registry.cpp  component_registry.h  entity.h  i_component_pool.h  i_savable.h  scene.cpp  scene.h  system.h  type_id.h
src/profiling/: profiler.cpp  profiler.h
src/systems/: movement_system.cpp  movement_system.h
tests/: benchmark_scene.cpp  test_memory.cpp  test_movement_system.cpp  test_scene.cpp  test_serialization.cpp
